# canonical-serialisation

./: 404.html  README.md  index.html  mkdocs.yml  poetry.lock.license  pyproject.toml  sitemap.xml
.github/workflows/: dco.yml  publish.yml  reuse.yml
datatypes/: index.html
datatypes/datetime/: index.html
introduction/: index.html
search/: search_index.json
spec/: index.md  introduction.md
spec/datatypes/: datetime.md  index.md
styles/: extra.css
